--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -26,9 +26,8 @@ dependencies:
   webview_flutter: ^0.3.22+1
   flutter_speed_dial: ^1.2.5
   flutter_local_notifications: ^1.4.4+1
-  clipboard_manager: ^0.0.4
   device_apps: ^1.0.9
-  call_number: ^0.0.1
+  url_launcher: ^5.4.10
 
 
 
